--- a/public/styles.css
+++ b/public/styles.css
@@ -1,63 +1,68 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
   color: #333;
-}
-
-.App {
+  font-family: 'Roboto', sans-serif;
   text-align: center;
 }
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Arvo', serif;
+}
 
-.App-logo {
-  animation: App-logo-spin infinite 7s linear;
-  height: 140px;
+.header {
+  background-color: cadetblue;
+  height: 32vh;
+  padding: 1.25rem;
+}
+.logo {
+  animation: logo-spin infinite 7s linear;
+  height: 18vh;
   cursor: pointer;
 }
-
-.App-header {
-  background-color: cadetblue;
-  height: 250px;
-  padding: 20px;
-  color: white;
-}
-
-.App-header h3 {
+.header h3 {
+  font-size: 2.5rem;
   font-weight: 200;
   margin-top: 5px;
+  color: white;
+  text-shadow: 2px 2px #333;
 }
 
-#home {
-  margin-top: 150px;
+.filters {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 18vw;
+  height: 8vh;
+}
+.filters button {
+  margin: 0.5rem;
+  padding: 0 2rem;
+  background-color: white;
+  border: none;
+  font-size: 1rem;
+}
+.filters button:hover {
+  background-color: #f5f5f5;
+}
+.filters button:active {
+  outline: none;
 }
 
-.cat-or-dog {
-  margin: 15px auto;
-}
-
-.cat-or-dog button, .cat-or-dog a {
-  font-size: 18px;
-}
-
-.App-content {
-  font-size: large;
-  padding: 5px;
-  background-color: beige;
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  font-size: 1.5rem;
+  padding: 1vw;
+  background-color: #f6f2ea;
   min-height: 60vh;
 }
-
-.animal-img {
-  height: 250px;
-  width: 250px;
-  cursor: pointer;
+.animal-card {
+  flex: 0 1 25%;
 }
 
-.animal-label {
-  margin-top: 3px;
-  margin-bottom: 30px;
-}
-
-@keyframes App-logo-spin {
+@keyframes logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
