--- a/public/styles.css
+++ b/public/styles.css
@@ -35,20 +35,23 @@ h1,h2,h3,h4,h5,h6 {
   margin: 0 18vw;
   height: 8vh;
 }
-.filters button {
+.filters a {
   margin: 0.5rem;
-  padding: 0 2rem;
-  background-color: white;
+  padding: 0.7rem 2rem;
   border: none;
   font-size: 1rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: inherit;
 }
-.filters button:hover {
+.filters a:hover {
   background-color: #f5f5f5;
 }
-.filters button:focus {
+.filters a:focus {
   outline: none;
   background-color: #f5f5f5;
 }
+
 
 .app {
   font-size: 1.5rem;
